// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can replace a color value 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "lang": "js",
      "type": "html",
      "value": "<pre class=\\"grvsc-container default-dark\\" data-language=\\"js\\" data-index=\\"0\\"><code class=\\"grvsc-code\\"><span class=\\"grvsc-line\\"><span class=\\"mtk4\\">const</span><span class=\\"mtk1\\"> </span><span class=\\"mtk12\\">x</span><span class=\\"mtk1\\"> = </span><span class=\\"mtk7\\">3</span><span class=\\"mtk1\\">;</span></span>
<span class=\\"grvsc-line\\"><span class=\\"mtk3\\">// Comment</span></span></code></pre>",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"grvsc-styles\\">
  
  .default-dark {
    background-color: #1E1E1E;
    color: #D4D4D4;
  }
  .default-dark .mtk4 { color: var(--color-569CD6); }
  .default-dark .mtk1 { color: var(--color-D4D4D4); }
  .default-dark .mtk12 { color: var(--color-9CDCFE); }
  .default-dark .mtk7 { color: var(--color-B5CEA8); }
  .default-dark .mtk3 { color: var(--color-6A9955); }
</style>",
    },
  ],
  "type": "root",
}
`;

exports[`included languages and themes can use a custom language alias 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "lang": "java-scripty",
      "type": "html",
      "value": "<pre class=\\"grvsc-container default-dark\\" data-language=\\"java-scripty\\" data-index=\\"0\\"><code class=\\"grvsc-code\\"><span class=\\"grvsc-line\\"><span class=\\"mtk4\\">const</span><span class=\\"mtk1\\"> </span><span class=\\"mtk12\\">x</span><span class=\\"mtk1\\"> = </span><span class=\\"mtk7\\">3</span><span class=\\"mtk1\\">;</span></span>
<span class=\\"grvsc-line\\"><span class=\\"mtk3\\">// Comment</span></span></code></pre>",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"grvsc-styles\\">
  
  .default-dark {
    background-color: #1E1E1E;
    color: #D4D4D4;
  }
  .default-dark .mtk4 { color: #569CD6; }
  .default-dark .mtk1 { color: #D4D4D4; }
  .default-dark .mtk12 { color: #9CDCFE; }
  .default-dark .mtk7 { color: #B5CEA8; }
  .default-dark .mtk3 { color: #6A9955; }
</style>",
    },
  ],
  "type": "root",
}
`;

exports[`included languages and themes can use a standard language alias 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "lang": "JavaScript",
      "type": "html",
      "value": "<pre class=\\"grvsc-container default-dark\\" data-language=\\"javascript\\" data-index=\\"0\\"><code class=\\"grvsc-code\\"><span class=\\"grvsc-line\\"><span class=\\"mtk4\\">const</span><span class=\\"mtk1\\"> </span><span class=\\"mtk12\\">x</span><span class=\\"mtk1\\"> = </span><span class=\\"mtk7\\">3</span><span class=\\"mtk1\\">;</span></span>
<span class=\\"grvsc-line\\"><span class=\\"mtk3\\">// Comment</span></span></code></pre>",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"grvsc-styles\\">
  
  .default-dark {
    background-color: #1E1E1E;
    color: #D4D4D4;
  }
  .default-dark .mtk4 { color: #569CD6; }
  .default-dark .mtk1 { color: #D4D4D4; }
  .default-dark .mtk12 { color: #9CDCFE; }
  .default-dark .mtk7 { color: #B5CEA8; }
  .default-dark .mtk3 { color: #6A9955; }
</style>",
    },
  ],
  "type": "root",
}
`;

exports[`included languages and themes includes special characters in language name 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "lang": "c++",
      "type": "html",
      "value": "<pre class=\\"grvsc-container default-dark\\" data-language=\\"c++\\" data-index=\\"0\\"><code class=\\"grvsc-code\\"><span class=\\"grvsc-line\\"><span class=\\"mtk4\\">const</span><span class=\\"mtk1\\"> x = </span><span class=\\"mtk7\\">3</span><span class=\\"mtk1\\">;</span></span>
<span class=\\"grvsc-line\\"><span class=\\"mtk3\\">// Comment</span></span></code></pre>",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"grvsc-styles\\">
  
  .default-dark {
    background-color: #1E1E1E;
    color: #D4D4D4;
  }
  .default-dark .mtk4 { color: #569CD6; }
  .default-dark .mtk1 { color: #D4D4D4; }
  .default-dark .mtk7 { color: #B5CEA8; }
  .default-dark .mtk3 { color: #6A9955; }
</style>",
    },
  ],
  "type": "root",
}
`;

exports[`included languages and themes partially works if an embedded grammar is missing 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "lang": "embedded",
      "type": "html",
      "value": "<pre class=\\"grvsc-container default-dark\\" data-language=\\"embedded\\" data-index=\\"0\\"><code class=\\"grvsc-code\\"><span class=\\"grvsc-line\\">const x = 3;</span>
<span class=\\"grvsc-line\\">// Comment</span></code></pre>",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"grvsc-styles\\">
  
  .default-dark {
    background-color: #1E1E1E;
    color: #D4D4D4;
  }
</style>",
    },
  ],
  "type": "root",
}
`;

exports[`included languages and themes works with default options 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "lang": "js",
      "type": "html",
      "value": "<pre class=\\"grvsc-container default-dark\\" data-language=\\"js\\" data-index=\\"0\\"><code class=\\"grvsc-code\\"><span class=\\"grvsc-line\\"><span class=\\"mtk4\\">const</span><span class=\\"mtk1\\"> </span><span class=\\"mtk12\\">x</span><span class=\\"mtk1\\"> = </span><span class=\\"mtk7\\">3</span><span class=\\"mtk1\\">;</span></span>
<span class=\\"grvsc-line\\"><span class=\\"mtk3\\">// Comment</span></span></code></pre>",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"grvsc-styles\\">
  
  .default-dark {
    background-color: #1E1E1E;
    color: #D4D4D4;
  }
  .default-dark .mtk4 { color: #569CD6; }
  .default-dark .mtk1 { color: #D4D4D4; }
  .default-dark .mtk12 { color: #9CDCFE; }
  .default-dark .mtk7 { color: #B5CEA8; }
  .default-dark .mtk3 { color: #6A9955; }
</style>",
    },
  ],
  "type": "root",
}
`;

exports[`included languages and themes works without highlighting if a code fence has no language 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "lang": "",
      "type": "html",
      "value": "<pre class=\\"grvsc-container default-dark\\" data-language=\\"\\" data-index=\\"0\\"><code class=\\"grvsc-code\\"><span class=\\"grvsc-line\\">const x = 3;</span>
<span class=\\"grvsc-line\\">// Comment</span></code></pre>",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"grvsc-styles\\">
  
  .default-dark {
    background-color: #1E1E1E;
    color: #D4D4D4;
  }
</style>",
    },
  ],
  "type": "root",
}
`;

exports[`included languages and themes works without highlighting if language is not recognized 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "lang": "none",
      "type": "html",
      "value": "<pre class=\\"grvsc-container default-dark\\" data-language=\\"none\\" data-index=\\"0\\"><code class=\\"grvsc-code\\"><span class=\\"grvsc-line\\">const x = 3;</span>
<span class=\\"grvsc-line\\">// Comment</span></code></pre>",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"grvsc-styles\\">
  
  .default-dark {
    background-color: #1E1E1E;
    color: #D4D4D4;
  }
</style>",
    },
  ],
  "type": "root",
}
`;

exports[`prefers-color-scheme supports prefers-color-scheme via an object for \`colorTheme\` 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "lang": "js",
      "type": "html",
      "value": "<pre class=\\"grvsc-container solarized-light grvsc-mm-tuw09S grvsc-mm-tZ0ymb\\" data-language=\\"js\\" data-index=\\"0\\"><code class=\\"grvsc-code\\"><span class=\\"grvsc-line\\"><span class=\\"grvsc-tiaGIi-13 grvsc-tiaGIi-b grvsc-tuw09S-11 grvsc-tZ0ymb-7\\">const</span><span class=\\"grvsc-tiaGIi-1 grvsc-tuw09S-1 grvsc-tZ0ymb-1\\"> </span><span class=\\"grvsc-tiaGIi-7 grvsc-tuw09S-3 grvsc-tZ0ymb-7\\">x</span><span class=\\"grvsc-tiaGIi-1 grvsc-tuw09S-1 grvsc-tZ0ymb-1\\"> </span><span class=\\"grvsc-tiaGIi-8 grvsc-tuw09S-15 grvsc-tZ0ymb-6\\">=</span><span class=\\"grvsc-tiaGIi-1 grvsc-tuw09S-1 grvsc-tZ0ymb-1\\"> </span><span class=\\"grvsc-tiaGIi-6 grvsc-tuw09S-3 grvsc-tZ0ymb-5\\">3</span><span class=\\"grvsc-tiaGIi-1 grvsc-tuw09S-1 grvsc-tZ0ymb-6\\">;</span></span>
<span class=\\"grvsc-line\\"><span class=\\"grvsc-tiaGIi-3 grvsc-tiaGIi-i grvsc-tuw09S-4 grvsc-tZ0ymb-3 grvsc-tZ0ymb-i\\">// Comment</span></span></code></pre>",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"grvsc-styles\\">
  
  .solarized-light { background-color: #FDF6E3; }
  .solarized-light .grvsc-tiaGIi-i { font-style: italic; }
  .solarized-light .grvsc-tiaGIi-b { font-weight: bold; }
  .solarized-light .grvsc-tiaGIi-13 { color: #073642; }
  .solarized-light .grvsc-tiaGIi-1 { color: #657B83; }
  .solarized-light .grvsc-tiaGIi-7 { color: #268BD2; }
  .solarized-light .grvsc-tiaGIi-8 { color: #859900; }
  .solarized-light .grvsc-tiaGIi-6 { color: #D33682; }
  .solarized-light .grvsc-tiaGIi-3 { color: #93A1A1; }
  
  /* Monokai Dimmed */
  @media (prefers-color-scheme: dark) {
    .grvsc-mm-tuw09S {
      background-color: #1e1e1e;
      color: #c5c8c6;
    }
    .grvsc-mm-tuw09S .grvsc-tuw09S-11 { color: #9872A2; }
    .grvsc-mm-tuw09S .grvsc-tuw09S-1 { color: #C5C8C6FF; }
    .grvsc-mm-tuw09S .grvsc-tuw09S-3 { color: #6089B4; }
    .grvsc-mm-tuw09S .grvsc-tuw09S-15 { color: #676867; }
    .grvsc-mm-tuw09S .grvsc-tuw09S-4 { color: #9A9B99; }
  }
  
  /* Quiet Light */
  @media (prefers-color-scheme: light) {
    .grvsc-mm-tZ0ymb { background-color: #F5F5F5; }
    .grvsc-mm-tZ0ymb .grvsc-tZ0ymb-i { font-style: italic; }
    .grvsc-mm-tZ0ymb .grvsc-tZ0ymb-7 { color: #7A3E9D; }
    .grvsc-mm-tZ0ymb .grvsc-tZ0ymb-1 { color: #333333; }
    .grvsc-mm-tZ0ymb .grvsc-tZ0ymb-6 { color: #777777; }
    .grvsc-mm-tZ0ymb .grvsc-tZ0ymb-5 { color: #9C5D27; }
    .grvsc-mm-tZ0ymb .grvsc-tZ0ymb-3 { color: #AAAAAA; }
  }
</style>",
    },
  ],
  "type": "root",
}
`;

exports[`prefers-color-scheme supports prefers-color-scheme with dynamically selected themes 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "lang": "js",
      "type": "html",
      "value": "<pre class=\\"grvsc-container solarized-light grvsc-mm-tlfloc grvsc-mm-tZ0ymb\\" data-language=\\"js\\" data-index=\\"0\\"><code class=\\"grvsc-code\\"><span class=\\"grvsc-line\\"><span class=\\"grvsc-tiaGIi-13 grvsc-tiaGIi-b grvsc-tlfloc-4 grvsc-tZ0ymb-7\\">const</span><span class=\\"grvsc-tiaGIi-1 grvsc-tlfloc-1 grvsc-tZ0ymb-1\\"> </span><span class=\\"grvsc-tiaGIi-7 grvsc-tlfloc-12 grvsc-tZ0ymb-7\\">x</span><span class=\\"grvsc-tiaGIi-1 grvsc-tlfloc-1 grvsc-tZ0ymb-1\\"> </span><span class=\\"grvsc-tiaGIi-8 grvsc-tlfloc-1 grvsc-tZ0ymb-6\\">=</span><span class=\\"grvsc-tiaGIi-1 grvsc-tlfloc-1 grvsc-tZ0ymb-1\\"> </span><span class=\\"grvsc-tiaGIi-6 grvsc-tlfloc-7 grvsc-tZ0ymb-5\\">3</span><span class=\\"grvsc-tiaGIi-1 grvsc-tlfloc-1 grvsc-tZ0ymb-6\\">;</span></span>
<span class=\\"grvsc-line\\"><span class=\\"grvsc-tiaGIi-3 grvsc-tiaGIi-i grvsc-tlfloc-3 grvsc-tZ0ymb-3 grvsc-tZ0ymb-i\\">// Comment</span></span></code></pre>",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "lang": "js",
      "type": "html",
      "value": "<pre class=\\"grvsc-container solarized-light grvsc-mm-tsSx3w grvsc-mm-tZ0ymb\\" data-language=\\"js\\" data-index=\\"1\\"><code class=\\"grvsc-code\\"><span class=\\"grvsc-line\\"><span class=\\"grvsc-tiaGIi-13 grvsc-tiaGIi-b grvsc-tsSx3w-9 grvsc-tsSx3w-i grvsc-tZ0ymb-7\\">const</span><span class=\\"grvsc-tiaGIi-1 grvsc-tsSx3w-1 grvsc-tZ0ymb-1\\"> </span><span class=\\"grvsc-tiaGIi-7 grvsc-tsSx3w-1 grvsc-tZ0ymb-7\\">x</span><span class=\\"grvsc-tiaGIi-1 grvsc-tsSx3w-1 grvsc-tZ0ymb-1\\"> </span><span class=\\"grvsc-tiaGIi-8 grvsc-tsSx3w-7 grvsc-tZ0ymb-6\\">=</span><span class=\\"grvsc-tiaGIi-1 grvsc-tsSx3w-1 grvsc-tZ0ymb-1\\"> </span><span class=\\"grvsc-tiaGIi-6 grvsc-tsSx3w-4 grvsc-tZ0ymb-5\\">3</span><span class=\\"grvsc-tiaGIi-1 grvsc-tsSx3w-1 grvsc-tZ0ymb-6\\">;</span></span>
<span class=\\"grvsc-line\\"><span class=\\"grvsc-tiaGIi-3 grvsc-tiaGIi-i grvsc-tsSx3w-3 grvsc-tZ0ymb-3 grvsc-tZ0ymb-i\\">// Comment</span></span></code></pre>",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"grvsc-styles\\">
  
  .solarized-light { background-color: #FDF6E3; }
  .solarized-light .grvsc-tiaGIi-i { font-style: italic; }
  .solarized-light .grvsc-tiaGIi-b { font-weight: bold; }
  .solarized-light .grvsc-tiaGIi-13 { color: #073642; }
  .solarized-light .grvsc-tiaGIi-1 { color: #657B83; }
  .solarized-light .grvsc-tiaGIi-7 { color: #268BD2; }
  .solarized-light .grvsc-tiaGIi-8 { color: #859900; }
  .solarized-light .grvsc-tiaGIi-6 { color: #D33682; }
  .solarized-light .grvsc-tiaGIi-3 { color: #93A1A1; }
  
  /* Dark+ (default dark) */
  @media (prefers-color-scheme: dark) {
    .grvsc-mm-tlfloc {
      background-color: #1E1E1E;
      color: #D4D4D4;
    }
    .grvsc-mm-tlfloc .grvsc-tlfloc-4 { color: #569CD6; }
    .grvsc-mm-tlfloc .grvsc-tlfloc-1 { color: #D4D4D4; }
    .grvsc-mm-tlfloc .grvsc-tlfloc-12 { color: #9CDCFE; }
    .grvsc-mm-tlfloc .grvsc-tlfloc-7 { color: #B5CEA8; }
    .grvsc-mm-tlfloc .grvsc-tlfloc-3 { color: #6A9955; }
  }
  
  /* Quiet Light */
  @media (prefers-color-scheme: light) {
    .grvsc-mm-tZ0ymb { background-color: #F5F5F5; }
    .grvsc-mm-tZ0ymb .grvsc-tZ0ymb-i { font-style: italic; }
    .grvsc-mm-tZ0ymb .grvsc-tZ0ymb-7 { color: #7A3E9D; }
    .grvsc-mm-tZ0ymb .grvsc-tZ0ymb-1 { color: #333333; }
    .grvsc-mm-tZ0ymb .grvsc-tZ0ymb-6 { color: #777777; }
    .grvsc-mm-tZ0ymb .grvsc-tZ0ymb-5 { color: #9C5D27; }
    .grvsc-mm-tZ0ymb .grvsc-tZ0ymb-3 { color: #AAAAAA; }
  }
  
  /* Monokai */
  @media (prefers-color-scheme: dark) {
    .grvsc-mm-tsSx3w {
      background-color: #272822;
      color: #f8f8f2;
    }
    .grvsc-mm-tsSx3w .grvsc-tsSx3w-i { font-style: italic; }
    .grvsc-mm-tsSx3w .grvsc-tsSx3w-9 { color: #66D9EF; }
    .grvsc-mm-tsSx3w .grvsc-tsSx3w-1 { color: #F8F8F2; }
    .grvsc-mm-tsSx3w .grvsc-tsSx3w-7 { color: #F92672; }
    .grvsc-mm-tsSx3w .grvsc-tsSx3w-4 { color: #AE81FF; }
    .grvsc-mm-tsSx3w .grvsc-tsSx3w-3 { color: #75715E; }
  }
</style>",
    },
  ],
  "type": "root",
}
`;

exports[`sets highlighted line class names 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "lang": "js{1,3-4}",
      "type": "html",
      "value": "<pre class=\\"grvsc-container default-dark\\" data-language=\\"js\\" data-index=\\"0\\"><code class=\\"grvsc-code\\"><span class=\\"grvsc-line grvsc-line-highlighted\\"><span class=\\"mtk3\\">// 1</span></span>
<span class=\\"grvsc-line\\"><span class=\\"mtk3\\">// 2</span></span>
<span class=\\"grvsc-line grvsc-line-highlighted\\"><span class=\\"mtk3\\">// 3</span></span>
<span class=\\"grvsc-line grvsc-line-highlighted\\"><span class=\\"mtk3\\">// 4</span></span>
<span class=\\"grvsc-line\\"><span class=\\"mtk3\\">// 5</span></span></code></pre>",
    },
    Object {
      "children": Array [],
      "type": "paragraph",
    },
    Object {
      "type": "html",
      "value": "<style class=\\"grvsc-styles\\">
  
  .default-dark {
    background-color: #1E1E1E;
    color: #D4D4D4;
  }
  .default-dark .mtk3 { color: #6A9955; }
</style>",
    },
  ],
  "type": "root",
}
`;
